[project]
name = "pass_gen_on_terminal"
version = "0.3.0"
description = "This is final project on CS50 Python."
authors = [{name = "MarkAlexI"}]
dependencies = []

[project.optional-dependencies]
dev = ["commitizen"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
